...
                          child: Row(
                            mainAxisSize: MainAxisSize.max,
                            mainAxisAlignment: MainAxisAlignment.center,
                            children: [
                              Expanded(
                                child: TextFormField(
                                  key: Key('codeField'),
                                  controller: codeController,
                                  //  focusNode: _model.codeFocusNode,
                                  textInputAction: TextInputAction.next,
                                  obscureText: false,
                                  decoration: InputDecoration(
                                    labelText: 'Code'.tr(),
...
                            mainAxisSize: MainAxisSize.max,
                            mainAxisAlignment: MainAxisAlignment.center,
                            children: [
                              Expanded(
                                child: TextFormField(
                                  controller: passwordController,
                                  key: Key('passwordField'),
                                  // focusNode: _model.codeFocusNode,
                                  textInputAction: TextInputAction.done,
                                  obscureText: false,
                                  decoration: InputDecoration(
                                    labelText: 'Password'.tr(),
                                    labelStyle: FlutterFlowTheme.of(context)
...
                                        ),
                                      ),
                                    );
                                  },
                                  fallback: (BuildContext context) {
                                    return  FFButtonWidget(
                                      key: Key('loginButton'),
                                      onPressed: () {
                                        if (formKey.currentState!.validate()) {

                                          AppCubit.get(context).loginByCode(
                                            carCode: codeController.text,
                                            password: passwordController.text,
...
