...
                      )
                    ],
                  ),
                ),
              ),
              BottomNavigationBarItem(
                key: Key('servicesButton'),
                icon: const Padding(
                  padding: EdgeInsets.all(8.0),
                  child: Icon(
                    Icons.car_repair_outlined,
                    color: Colors.grey,
                    size: 20,
...
                      )
                    ],
                  ),
                ),
              ),
              BottomNavigationBarItem(
                key: Key('personButton'),
                icon: const Padding(
                  padding: EdgeInsets.all(8.0),
                  child: Icon(
                    Icons.person_outline,
                    color: Colors.grey,
                    size: 20,
...
